--- a/src/index.html
+++ b/src/index.html
@@ -12,23 +12,39 @@
     <title>Vibe</title>
   </head>
   <body>
-    <!-- Header -->
-    <!-- Hero -->
-    <!-- History -->
-    <!-- Description -->
-    <!-- Plans -->
-    <!-- Impression -->
-    <!-- Booking -->
-    <!-- Masters -->
-    <!-- Benefits -->
-    <!-- Advantages -->
-    <!-- Search -->
-    <!-- Consulting -->
-    <!-- Reviews -->
-    <!-- Questions -->
-    <!-- Feedback -->
-    <!-- Popularity -->
-    <!-- Footer -->
+    <include src="./partials/header.html"></include>
+
+    <include src="./partials/hero.html"></include>
+
+    <include src="./partials/history.html"></include>
+
+    <include src="./partials/description.html"></include>
+
+    <include src="./partials/plans.html"></include>
+
+    <include src="./partials/impression.html"></include>
+
+    <include src="./partials/booking.html"></include>
+
+    <include src="./partials/masters.html"></include>
+
+    <include src="./partials/benefits.html"></include>
+
+    <include src="./partials/advantages.html"></include>
+
+    <include src="./partials/search.html"></include>
+
+    <include src="./partials/consulting.html"></include>
+
+    <include src="./partials/reviews.html"></include>
+
+    <include src="./partials/questions.html"></include>
+
+    <include src="./partials/feedback.html"></include>
+
+    <include src="./partials/popularity.html"></include>
+
+    <include src="./partials/footer.html"></include>
 
     <script src="./index.js"></script>
   </body>
